--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,9 +12,16 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 /* append your custom style below */
 
 .post-content {
-	counter-reset: heading figure;
+	counter-reset: heading figure activity;
 }
-.post-content > h2:before {
+
+.activity:before {
+	content: "Actividad " counter(activity) ": ";
+	counter-increment: activity;
+}
+
+
+/*.post-content > h2:before {
 	content: counter(heading)". ";
 	counter-increment: heading;
 }
@@ -31,7 +38,7 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 .post-content > h4:before {
 	content: counter(heading)"." counter(subheading)"." counter(subsubheading)". ";
 	counter-increment: subsubheading;
-}
+}*/
 
 .giscus, .giscus-frame {
 	width: 100%;
