--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -12,3 +12,26 @@
         crossorigin="anonymous"
         async>
 </script>
+
+<script>
+function changeGiscusTheme () {
+  const theme = document.documentElement.getAttribute('data-theme') === 'dark' ?  'dark' : 'light'
+  function sendMessage(message) {
+    const iframe = document.querySelector('iframe.giscus-frame');
+    if (!iframe) return;
+    iframe.contentWindow.postMessage({ giscus: message }, 'https://giscus.app');
+  }
+  sendMessage({
+    setConfig: {
+      theme: theme
+    }
+  });
+}
+
+const modeToggle = document.querySelector(".mode-toggle");
+
+if (typeof modeToggle !== "undefined") {
+  modeToggle.addEventListener('click', changeGiscusTheme); // not pretty for 'color-scheme'  
+  //window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', changeGiscusTheme);
+}
+</script>
