--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,7 +34,7 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 .subsection {
 	counter-reset: subsubheading;
 }
-.subsubsection {
+.subsubsection:before {
 	content: counter(heading)"." counter(subheading)"." counter(subsubheading)". ";
 	counter-increment: subsubheading;
 }
