--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,11 +56,13 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 }*/
 
 .question{
-	padding: 1em;
-	box-shadow: rgba(148, 148, 148, 0.3) 0px 0px 0px 3px;
+	/*padding: 1em;
+	box-shadow: rgba(148, 148, 148, 0.3) 0px 0px 0px 3px;*/
+	font-weight: bold;
 }
 
 .question:before {
 	content: "Pregunta " counter(question) ": ";
 	counter-increment: question;
+	font-weight: bold;
 }
