--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 /* append your custom style below */
 
 .post-content {
-	counter-reset: heading figure activity question;
+	counter-reset: heading figure activity question step;
 }
 
 .activity:before {
@@ -65,5 +65,10 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 	content: "Pregunta " counter(question) ": ";
 	counter-increment: question;
 	font-weight: bold;
+}
+
+.step:after {
+	content: " "counter(step);
+	counter-increment: step;
 }
 
