--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -72,3 +72,9 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 	counter-increment: step;
 }
 
+.card {
+	background-color: var(--highlight-bg-color); 
+}
+.card-body {
+	background-color: var(--highlight-bg-color); 
+}
