aspect ratio de los videos a 16/9 siempre.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,3 +75,8 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 .card {
 	background-color: var(--highlight-bg-color); 
 }
+
+iframe[title="YouTube video player"]{
+	width:100%;
+	aspect-ratio: 16/9;
+}
