Añado video a ud1

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -80,3 +80,8 @@ iframe[title="YouTube video player"]{
 	width:100%;
 	aspect-ratio: 16/9;
 }
+
+iframe[title="slides"]{
+	width:100%;
+	aspect-ratio: 16/10;
+}
