--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -86,6 +86,7 @@ iframe[title="slides"]{
 	aspect-ratio: 16/10;
 }
 
+/* Hago que las fotos transparentes tengan fondo blanco */
 img {
 	background-clip: content-box;
 	background-color: white;
@@ -102,9 +103,10 @@ html:not([data-mode]), html [data-mode="light"] {
 	--seguridad-informatica-color: #001D3D;
 }
 
+/** Get from https://mdigi.tools/lighten-color/#001d3d */
 html[data-mode="dark"] {
-	--redes-locales-color: #D7031A;
-	--tic-ii-color: #FFF6C9;
-	--servicios-en-red-color: #DAD7CD;
-	--seguridad-informatica-color: #FFF8D6;
+	--redes-locales-color: #f96575;
+	--tic-ii-color: #ffb17b;
+	--servicios-en-red-color: #a4c2b3;
+	--seguridad-informatica-color: #4ba1ff;
 }
